--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T06:00:23.357459Z",
@@ -209,7 +209,7 @@
        "'sample_airbnb'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-16T22:26:35.207080Z",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3873,15 +3873,353 @@
       "            'a 50 meters; • Lift Guindais (Funicular) 50 meters; • Tuc Tuc-to '\n",
       "            'get around the city; • Buses tourist; • Cycling through the '\n",
       "            'marginal drive; • Cable car in Gaia, overlooking the Port (just '\n",
-      "            'cross the bridge).'}\n"
+      "            'cross the bridge).'}\n",
+      "In total, the first document contains 64 keys\n"
      ]
     }
    ],
    "source": [
     "# Find one document in the collection 'listingsAndReviews'\n",
     "document = db.listingsAndReviews_HW2.find_one()\n",
-    "pprint(document)"
+    "pprint(document)\n",
+    "print(f\"In total, the first document contains {len(document)} keys\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['_id',\n",
+      " 'access',\n",
+      " 'accommodates',\n",
+      " 'address',\n",
+      " 'amenities',\n",
+      " 'availability',\n",
+      " 'bathrooms',\n",
+      " 'bed_type',\n",
+      " 'bedrooms',\n",
+      " 'beds',\n",
+      " 'calendar_last_scraped',\n",
+      " 'cancellation_policy',\n",
+      " 'cleaning_fee',\n",
+      " 'description',\n",
+      " 'extra_people',\n",
+      " 'first_review',\n",
+      " 'guests_included',\n",
+      " 'host_about',\n",
+      " 'host_has_profile_pic',\n",
+      " 'host_id',\n",
+      " 'host_identity_verified',\n",
+      " 'host_is_superhost',\n",
+      " 'host_listings_count',\n",
+      " 'host_location',\n",
+      " 'host_name',\n",
+      " 'host_neighbourhood',\n",
+      " 'host_picture_url',\n",
+      " 'host_response_rate',\n",
+      " 'host_response_time',\n",
+      " 'host_thumbnail_url',\n",
+      " 'host_total_listings_count',\n",
+      " 'host_url',\n",
+      " 'host_verifications',\n",
+      " 'house_rules',\n",
+      " 'images',\n",
+      " 'interaction',\n",
+      " 'last_review',\n",
+      " 'last_scraped',\n",
+      " 'listing_url',\n",
+      " 'maximum_nights',\n",
+      " 'minimum_nights',\n",
+      " 'monthly_price',\n",
+      " 'name',\n",
+      " 'neighborhood_overview',\n",
+      " 'notes',\n",
+      " 'number_of_reviews',\n",
+      " 'price',\n",
+      " 'property_type',\n",
+      " 'review_scores_checkin',\n",
+      " 'review_scores_cleanliness',\n",
+      " 'review_scores_communication',\n",
+      " 'review_scores_location',\n",
+      " 'review_scores_rating',\n",
+      " 'review_scores_value',\n",
+      " 'reviews',\n",
+      " 'reviews_copy1',\n",
+      " 'reviews_copy2',\n",
+      " 'reviews_copy3',\n",
+      " 'reviews_copy4',\n",
+      " 'reviews_per_month',\n",
+      " 'room_type',\n",
+      " 'security_deposit',\n",
+      " 'space',\n",
+      " 'summary',\n",
+      " 'transactions',\n",
+      " 'transit',\n",
+      " 'weekly_price']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query to retrieve all keys names from the collection 'listingsAndReviews' (Using aggregation)\n",
+    "# Define the aggregation pipeline\n",
+    "pipeline = [\n",
+    "    {\"$project\": {\"keys\": {\"$objectToArray\": \"$$ROOT\"}}},  # Convert document to key-value pairs\n",
+    "    {\"$unwind\": \"$keys\"},                                 # Flatten the keys array\n",
+    "    {\"$group\": {\"_id\": \"$keys.k\"}}                        # Group by key names to get distinct keys\n",
+    "]\n",
+    "\n",
+    "# Execute the aggregation\n",
+    "result = db.listingsAndReviews_HW2.aggregate(pipeline)\n",
+    "\n",
+    "# Extract distinct keys from the result\n",
+    "keys = [doc[\"_id\"] for doc in result]\n",
+    "\n",
+    "# Print the list of unique keys\n",
+    "pprint(sorted(keys))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The code above just return the **\"top-level\" fields** of the document."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['_id',\n",
+      " 'access',\n",
+      " 'accommodates',\n",
+      " 'address',\n",
+      " 'address.country',\n",
+      " 'address.country_code',\n",
+      " 'address.government_area',\n",
+      " 'address.location',\n",
+      " 'address.location.coordinates',\n",
+      " 'address.location.is_location_exact',\n",
+      " 'address.location.type',\n",
+      " 'address.market',\n",
+      " 'address.street',\n",
+      " 'address.suburb',\n",
+      " 'amenities',\n",
+      " 'availability',\n",
+      " 'availability.availability_30',\n",
+      " 'availability.availability_365',\n",
+      " 'availability.availability_60',\n",
+      " 'availability.availability_90',\n",
+      " 'bathrooms',\n",
+      " 'bed_type',\n",
+      " 'bedrooms',\n",
+      " 'beds',\n",
+      " 'calendar_last_scraped',\n",
+      " 'cancellation_policy',\n",
+      " 'cleaning_fee',\n",
+      " 'description',\n",
+      " 'extra_people',\n",
+      " 'first_review',\n",
+      " 'guests_included',\n",
+      " 'host_about',\n",
+      " 'host_has_profile_pic',\n",
+      " 'host_id',\n",
+      " 'host_identity_verified',\n",
+      " 'host_is_superhost',\n",
+      " 'host_listings_count',\n",
+      " 'host_location',\n",
+      " 'host_name',\n",
+      " 'host_neighbourhood',\n",
+      " 'host_picture_url',\n",
+      " 'host_response_rate',\n",
+      " 'host_response_time',\n",
+      " 'host_thumbnail_url',\n",
+      " 'host_total_listings_count',\n",
+      " 'host_url',\n",
+      " 'host_verifications',\n",
+      " 'house_rules',\n",
+      " 'images',\n",
+      " 'images.medium_url',\n",
+      " 'images.picture_url',\n",
+      " 'images.thumbnail_url',\n",
+      " 'images.xl_picture_url',\n",
+      " 'interaction',\n",
+      " 'last_review',\n",
+      " 'last_scraped',\n",
+      " 'listing_url',\n",
+      " 'maximum_nights',\n",
+      " 'minimum_nights',\n",
+      " 'monthly_price',\n",
+      " 'name',\n",
+      " 'neighborhood_overview',\n",
+      " 'notes',\n",
+      " 'number_of_reviews',\n",
+      " 'price',\n",
+      " 'property_type',\n",
+      " 'review_scores_checkin',\n",
+      " 'review_scores_cleanliness',\n",
+      " 'review_scores_communication',\n",
+      " 'review_scores_location',\n",
+      " 'review_scores_rating',\n",
+      " 'review_scores_value',\n",
+      " 'reviews',\n",
+      " 'reviews._id',\n",
+      " 'reviews.comments',\n",
+      " 'reviews.date',\n",
+      " 'reviews.listing_id',\n",
+      " 'reviews.reviewer_id',\n",
+      " 'reviews.reviewer_name',\n",
+      " 'reviews_copy1',\n",
+      " 'reviews_copy1._id',\n",
+      " 'reviews_copy1.comments',\n",
+      " 'reviews_copy1.date',\n",
+      " 'reviews_copy1.listing_id',\n",
+      " 'reviews_copy1.reviewer_id',\n",
+      " 'reviews_copy1.reviewer_name',\n",
+      " 'reviews_copy2',\n",
+      " 'reviews_copy2._id',\n",
+      " 'reviews_copy2.comments',\n",
+      " 'reviews_copy2.date',\n",
+      " 'reviews_copy2.listing_id',\n",
+      " 'reviews_copy2.reviewer_id',\n",
+      " 'reviews_copy2.reviewer_name',\n",
+      " 'reviews_copy3',\n",
+      " 'reviews_copy3._id',\n",
+      " 'reviews_copy3.comments',\n",
+      " 'reviews_copy3.date',\n",
+      " 'reviews_copy3.listing_id',\n",
+      " 'reviews_copy3.reviewer_id',\n",
+      " 'reviews_copy3.reviewer_name',\n",
+      " 'reviews_copy4',\n",
+      " 'reviews_copy4._id',\n",
+      " 'reviews_copy4.comments',\n",
+      " 'reviews_copy4.date',\n",
+      " 'reviews_copy4.listing_id',\n",
+      " 'reviews_copy4.reviewer_id',\n",
+      " 'reviews_copy4.reviewer_name',\n",
+      " 'reviews_per_month',\n",
+      " 'room_type',\n",
+      " 'security_deposit',\n",
+      " 'space',\n",
+      " 'summary',\n",
+      " 'transactions',\n",
+      " 'transactions.bucket_end_date',\n",
+      " 'transactions.bucket_start_date',\n",
+      " 'transactions.transaction_count',\n",
+      " 'transactions.transactions',\n",
+      " 'transactions.transactions.date',\n",
+      " 'transactions.transactions.price',\n",
+      " 'transit',\n",
+      " 'weekly_price']\n",
+      "In total, there are \u001b[1m121 unique keys\u001b[0m in the collection 'listingsAndReviews'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to recursively extract all keys from a document (nested dictionaries and lists)\n",
+    "def extract_keys(obj, prefix=\"\"):\n",
+    "    \"\"\"Recursively extract all keys from a document.\n",
+    "\n",
+    "    Args:\n",
+    "        obj: The object to process (dict, list, or other type). \n",
+    "        prefix (str, optional): String prefix for nested keys (e.g., \"address\" becomes \"address.country\"). Defaults to \"\".\n",
+    "\n",
+    "    Returns:\n",
+    "        keys: A set of unique key names found in the document.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Initialize an empty set to store unique keys\n",
+    "    keys = set()\n",
+    "    \n",
+    "    # Check if the object is a dictionary (e.g., a MongoDB document or subdocument)\n",
+    "    if isinstance(obj, dict):\n",
+    "        # Iterate over key-value pairs in the dictionary\n",
+    "        for k, v in obj.items():\n",
+    "            # Construct the full key name; no dot if prefix is empty, otherwise add dot separator\n",
+    "            full_key = f\"{prefix}{k}\" if not prefix else f\"{prefix}.{k}\"\n",
+    "            keys.add(full_key)                                                      # Add the full key to the set\n",
+    "            keys.update(extract_keys(v, full_key))                                  # Recursively extract keys from the value, using the current key as prefix\n",
+    "            \n",
+    "    # Check if the object is a list (e.g., an array like 'reviews' or 'amenities')\n",
+    "    elif isinstance(obj, list):\n",
+    "        # Iterate over each item in the list\n",
+    "        for item in obj:\n",
+    "            # Recursively extract keys from the item, keeping the same prefix\n",
+    "            keys.update(extract_keys(item, prefix))\n",
+    "            \n",
+    "    return keys\n",
+    "\n",
+    "# Aggregate to get all documents and process them\n",
+    "all_keys = set()\n",
+    "for doc in db.listingsAndReviews_HW2.find():\n",
+    "    doc_keys = extract_keys(doc)\n",
+    "    all_keys.update(doc_keys)\n",
+    "\n",
+    "# Convert to sorted list for readability\n",
+    "unique_keys = sorted(list(all_keys))\n",
+    "\n",
+    "# Print the list of unique keys\n",
+    "pprint(unique_keys)\n",
+    "print(f\"In total, there are \\033[1m{len(unique_keys)} unique keys\\033[0m in the collection 'listingsAndReviews'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
