--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T06:00:23.357459Z",
@@ -209,7 +209,7 @@
        "'sample_airbnb'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-16T22:26:35.207080Z",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3883,6 +3883,51 @@
     "document = db.listingsAndReviews_HW2.find_one()\n",
     "pprint(document)\n",
     "print(f\"In total, the first document contains {len(document)} keys\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document saved to airbnb_document.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from bson.decimal128 import Decimal128\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# EXTRA: Save the document to a JSON file (to see the structure more clearly)\n",
+    "def convert_to_serializable(obj):\n",
+    "    \"\"\"\n",
+    "    Converts non-serializable objects (like Decimal128 and datetime) to strings.\n",
+    "    \"\"\"\n",
+    "    if isinstance(obj, Decimal128):\n",
+    "        return str(obj)\n",
+    "    elif isinstance(obj, datetime):\n",
+    "        return obj.isoformat()\n",
+    "    raise TypeError(f\"Object of type '{obj.__class__.__name__}' is not JSON serializable\")\n",
+    "\n",
+    "def save_to_json_file(document, filename=\"airbnb_document.json\"):\n",
+    "    \"\"\"\n",
+    "    Saves a MongoDB document to a JSON file, handling non-serializable data types.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        with open(filename, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(document, f, ensure_ascii=False, indent=4, default=convert_to_serializable)\n",
+    "        print(f\"Document saved to {filename}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving to JSON file: {e}\")\n",
+    "        \n",
+    "        \n",
+    "#Save the document from Listings Collection\n",
+    "save_to_json_file(document)"
    ]
   },
   {
