Resolvi as queries todas sem mexer no esquema - para depois compararmos (23.03)

--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T06:00:23.357459Z",
@@ -209,7 +209,7 @@
        "'sample_airbnb'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-16T22:26:35.207080Z",
@@ -319,127 +319,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert\" style=\"background-color:rgb(255, 255, 255, 0); border: 0px; border-left: 10px solid rgb(0, 12, 243); padding: 10px; border-radius: 10px;\">\n",
-    "\n",
-    "\n",
-    "# **Schema Adjustments for Data Cleanup** [Grok Answer]\n",
-    "\n",
-    "## New Schema Overview\n",
-    "\n",
-    "- **Listings Collection**: Core listing data with a subset of reviews.\n",
-    "- **Reviews Collection**: All historical reviews.\n",
-    "- **Hosts Collection**: Host-specific data.\n",
-    "- **Transactions Collection**: Cleaned transaction data (optional).\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 1. Separating Hosts into a New Collection\n",
-    "\n",
-    "**Decision**: Move host-related fields (e.g., `host_id`, `host_name`, `host_is_superhost`) from **`Listings`** to a **`Hosts`** collection, linking via `HostId`.\n",
-    "\n",
-    "- **Relationship Type**: 1:N (One host to many listings).\n",
-    "- **Embedded or Separated**: Separated into **`Hosts`** collection.\n",
-    "\n",
-    "**Why**:\n",
-    "- **Slide Reference**: \"Data Models - One to Many Relationships\" (Linking on the Many Side).\n",
-    "- **Reasoning**: Hosts can have multiple listings, and embedding host data in every listing duplicates it unnecessarily. Separating it into **`Hosts`** ensures consistency, reduces redundancy, and simplifies updates.\n",
-    "- **Performance**: Queries for listings don’t need to load redundant host data, reducing document size.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 2. Moving Reviews to a Separate Collection\n",
-    "\n",
-    "**Decision**: Extract all reviews into a **`Reviews`** collection, linked to **`Listings`** via `ListingId`. Keep a subset (`RecentReviews`) embedded in **`Listings`**.\n",
-    "\n",
-    "- **Relationship Type**: 1:N (One listing to many reviews).\n",
-    "- **Embedded or Separated**: Separated into **`Reviews`**, with a small subset embedded in **`Listings`**.\n",
-    "\n",
-    "**Why**:\n",
-    "- **Slide Reference**: \"Data Models - One to Many Relationships\" (Linking on the Many Side).\n",
-    "- **Reasoning**: Embedding all reviews bloats **`Listings`** documents, slowing queries. Separating reviews into **`Reviews`** supports scalability and BI analysis, while embedding `RecentReviews` (5 latest) in **`Listings`** uses the \"Subset Pattern\" for fast customer access.\n",
-    "- **Performance**: Linking reduces document size for the typical use case. Indexing `ListingId` and `Date` in **`Reviews`** speeds up retrieval of additional reviews if needed.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 3. Embedding RecentReviews in Listings\n",
-    "\n",
-    "**Decision**: Embed the 5 most recent reviews as `RecentReviews` in **`Listings`**.\n",
-    "\n",
-    "- **Relationship Type**: 1:N (One listing to many reviews, subset embedded).\n",
-    "- **Embedded or Separated**: Embedded subset.\n",
-    "\n",
-    "**Why**:\n",
-    "- **Slide Reference**: \"Data Models - One to Many Relationships\" (Embedding on One Side).\n",
-    "- **Reasoning**: Customers need a sample of reviews for quick decisions, and a small subset (5 reviews) keeps documents manageable. This avoids expensive joins for common queries.\n",
-    "- **Performance**: Embedding `RecentReviews` ensures data is read together efficiently, reducing latency for the typical use case.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 4. Separating Transactions into a New Collection\n",
-    "\n",
-    "**Decision**: Remove transactions from **`Listings`** and optionally store cleaned data in a **`Transactions`** collection, linked via `ListingId`.\n",
-    "\n",
-    "- **Relationship Type**: 1:N (One listing to many transactions).\n",
-    "- **Embedded or Separated**: Separated into **`Transactions`**.\n",
-    "\n",
-    "**Why**:\n",
-    "- **Slide Reference**: \"Data Models - One to Many Relationships\" (Linking on the Many Side).\n",
-    "- **Reasoning**: Transactions are irrelevant for customers and contain errors. Separating them avoids bloating **`Listings`** and allows cleanup. If kept, linking via `ListingId` supports future BI use without impacting customer queries.\n",
-    "- **Performance**: Removing transactions shrinks **`Listings`** documents, speeding up reads. Indexes on **`Transactions`** can optimize specific queries later.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 5. Embedding ReviewScores in Listings\n",
-    "\n",
-    "**Decision**: Keep `ReviewScores` (e.g., cleanliness, checkin) embedded in **`Listings`**.\n",
-    "\n",
-    "- **Relationship Type**: 1:1 (One listing to one set of review scores).\n",
-    "- **Embedded or Separated**: Embedded.\n",
-    "\n",
-    "**Why**:\n",
-    "- **Slide Reference**: \"Data Models - One to One Relationships\" (Embedding).\n",
-    "- **Reasoning**: Review scores are small, static, and critical for customer decisions. Embedding them in **`Listings`** aligns with natural data ownership and avoids unnecessary joins.\n",
-    "- **Performance**: Embedding ensures fast access with no additional queries.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 6. No N:N Relationships Identified\n",
-    "\n",
-    "**Decision**: No many-to-many relationships were modeled.\n",
-    "\n",
-    "**Why**:\n",
-    "- **Slide Reference**: \"Data Models - Many to Many Relationships\".\n",
-    "- **Reasoning**: The AirBnB data doesn’t show N:N relationships. Listings have multiple reviews (1:N), hosts have multiple listings (1:N), but no clear \"many listings to many hosts\" or similar N:N exists. Embedding or linking both ways isn’t needed, avoiding complexity and staleness.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Additional Justifications from Patterns\n",
-    "\n",
-    "- **Subset Pattern**: Applied to `RecentReviews` to keep only a small, frequently accessed subset in **`Listings`**, reducing RAM usage and improving read performance.\n",
-    "- **Extended Reference Pattern**: Applied to **`Hosts`** to avoid duplicating host data, selecting fields that don’t change often (e.g., Name, Verifications) for consistency.\n",
-    "- **Indexes**: Added to **`Listings`** (Address.market, Price) and **`Reviews`** (ListingId, Date) to support efficient queries.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Summary Table\n",
-    "\n",
-    "| Data           | Relationship | Embedded/Separated | Why (Slides-Based)                                                                 |\n",
-    "|----------------|--------------|-------------------|-----------------------------------------------------------------------------------|\n",
-    "| **`Hosts`**    | 1:N (to **`Listings`**) | Separated         | Avoid duplication, ensure consistency (\"Extended Reference\", \"1:N Linking\").     |\n",
-    "| **`Reviews`**  | 1:N (to **`Listings`**) | Separated         | Scalability, BI needs (\"1:N Linking\", \"Subset Pattern\").                         |\n",
-    "| `RecentReviews`| 1:N (subset)  | Embedded           | Fast customer access, limited size (\"Subset Pattern\", \"1:N Embedding\").          |\n",
-    "| **`Transactions`** | 1:N (to **`Listings`**) | Separated         | Remove irrelevant/errors, optimize reads (\"1:N Linking\", \"Data Integrity\").      |\n",
-    "| `ReviewScores` | 1:1 (to **`Listings`**) | Embedded           | Small, critical data, no joins needed (\"1:1 Embedding\", \"Natural ownership\").   |\n",
-    "\n",
-    "This design balances performance and simplicity, evolving the schema to meet the homework’s use case and BI requirements.\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -470,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3882,7 +3761,7 @@
     "# Find one document in the collection 'listingsAndReviews'\n",
     "document = db.listingsAndReviews_HW2.find_one()\n",
     "pprint(document)\n",
-    "print(f\"In total, the first document contains {len(document)} keys\")"
+    "print(f\"\\nIn total, the first document contains {len(document)} keys\")"
    ]
   },
   {
