--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-17T06:00:23.357459Z",
@@ -206,7 +206,7 @@
        "'sample_airbnb'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-16T22:26:35.207080Z",
@@ -291,8 +291,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The database contains 2 collections\n",
-      "All collections: ['listingsAndReviews', 'listingsAndReviews_HW2']\n",
+      "The database contains 3 collections\n",
+      "All collections: ['listingsAndReviews', 'listingsAndReviews_HW2', 'Reviews']\n",
       "Collection listingsAndReviews contains 5555 documents\n"
      ]
     }
@@ -1707,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1737,13 +1737,13 @@
    ],
    "source": [
     "# Check if all 'bathrooms' are integers\n",
-    "batchrooms_all = list(db.listingsAndReviews_HW2.aggregate([\n",
+    "bathrooms_all = list(db.listingsAndReviews_HW2.aggregate([\n",
     "    # Return all 'bathrooms' values\n",
     "    {\"$group\": {\"_id\": None, \"bathrooms\": {\"$addToSet\": \"$bathrooms\"}}}\n",
     "]))\n",
     "\n",
     "# Extract the result\n",
-    "pprint(batchrooms_all)"
+    "pprint(bathrooms_all)"
    ]
   },
   {
@@ -1752,7 +1752,9 @@
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
     "\n",
-    "# **O QUE É QUE FAZEMOS?**\n",
+    "**COMENTAR**\n",
+    "\n",
+    "- https://community.withairbnb.com/t5/Advice-on-your-space/How-to-calculate-Bathrooms/td-p/1437848  JUSTIFICAÇÃO PARA DECIMAIS NOS CÓMODOS DAS WCS\n",
     "\n",
     "</div>"
    ]
@@ -1932,8 +1934,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "\n",
+    "**COMENTAR** dizer que não vamos converter o **`extra_people`** para **`int`** porque é um valor monetário e apesar de não ocorrer ser decimal, poderá vir a acontecer\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1965,7 @@
     "db.listingsAndReviews_HW2.update_many(\n",
     "    {},                                                                                         # Update all documents\n",
     "    [{\"$set\": {\"guests_included\": { \"$convert\": { \"input\": \"$guests_included\", \"to\": \"int\" } }}},\n",
-    "     {\"$set\": {\"extra_people\": { \"$convert\": { \"input\": \"$extra_people\", \"to\": \"int\" } }}}\n",
+    "    #  {\"$set\": {\"extra_people\": { \"$convert\": { \"input\": \"$extra_people\", \"to\": \"int\" } }}}    # If u want to convert 'extra_people' as well\n",
     "])"
    ]
   },
@@ -3811,7 +3824,43 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "\n",
-    "**COMENTAR**\n",
+    "**COMENTAR** Dizer os erros todos e analizar os valores\n",
+    "\n",
+    "https://community.withairbnb.com/t5/Advice-on-your-space/bathroom-classification/m-p/1652130  CASO DOS ZEROS\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document with _id: 10911771 has maximum_nights: 2147483647           | Host URL: https://www.airbnb.com/users/show/52473150\n",
+      "Document with _id: 19550563 has maximum_nights: 1234567890           | Host URL: https://www.airbnb.com/users/show/137344895\n",
+      "Document with _id: 6357527 has maximum_nights: 2147483647           | Host URL: https://www.airbnb.com/users/show/18762837\n",
+      "Document with _id: 744242 has maximum_nights: 2147483647           | Host URL: https://www.airbnb.com/users/show/4334558\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check cases with 'maximum_nights' more that 1 000 000\n",
+    "large_maximum_nights = db.listingsAndReviews_HW2.find({\"maximum_nights\": {\"$gt\": 1_000_000}})\n",
+    "for doc in large_maximum_nights:\n",
+    "    print(f\"Document with _id: {doc['_id']} has maximum_nights: {doc['maximum_nights']:<20} | Host URL: {doc['host_url']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "\n",
+    "**COMENTAR** - https://community.withairbnb.com/t5/Ask-about-your-listing/Minimum-nights-error-when-duplicated-a-booking/m-p/1886905\n",
     "\n",
     "</div>"
    ]
@@ -3895,6 +3944,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No documents found with last_scraped < last_review.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if 'last_scraped' < 'last_review' (Invalid data)\n",
+    "invalid_dates = db.listingsAndReviews_HW2.find({\n",
+    "    \"$expr\": {\n",
+    "        \"$lt\": [\"$last_scraped\", \"$last_review\"]\n",
+    "    }\n",
+    "})\n",
+    "if len(list(invalid_dates)) >  0:\n",
+    "    for doc in invalid_dates:\n",
+    "        print(f\"Document with _id: {doc['_id']} has last_scraped: {doc['last_scraped']} < last_review: {doc['last_review']}\")\n",
+    "else:\n",
+    "    print(\"No documents found with last_scraped < last_review.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3905,7 +3981,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **💾 1.5 | Aggregate **`review_scores_*`** into a single field (subdocument)**"
+    "### **📚 1.5 | Data Model Adjustments**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "\n",
+    "**Tabela João**\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Aggregate **`review_scores_*`** into a single field (subdocument)**"
    ]
   },
   {
@@ -3923,7 +4017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3951,7 +4045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3987,13 +4081,13 @@
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
     "\n",
-    "# **Querem manter o nome ou fazer o q?**\n",
+    "**Querem manter o nome ou fazer o q?**\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4035,13 +4129,6 @@
    "metadata": {},
    "source": [
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **📚 1.6 | Data Model Adjustments**"
    ]
   },
   {
