--- a/Homework2_MongoDB/Group5_BDMM_HW2_JH.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2_JH.ipynb
@@ -4903,7 +4903,7 @@
     "\n",
     "| **From Entity** | **To Entity** | **Relationship** | **Why** | \n",
     "|------------------|---------------|------------------|----------------------|\n",
-    "| `Listings` → `Hosts` | 1:1 or 1:N | **Reference** | Avoid host duplication; allows host reuse and updates \n",
+    "| `Listings` → `Hosts` | N:1 | **Reference** | Avoid host duplication; allows host reuse and updates \n",
     "| `Listings` → `Reviews` | 1:N | **Reference** | Reviews can be large and grow over time; keeps listing document light \n",
     "| `Reviews` → `Reviewers` | N:1 | **Reference** | One reviewer can write many reviews; enables reviewer-level tracking \n",
     "| `Listings` → `Transactions` | 1:N | **Reference** | Time-series data; best stored and queried separately \n",
